--- a/GoToApp/res/layout/activity_list_groups.xml
+++ b/GoToApp/res/layout/activity_list_groups.xml
@@ -3,17 +3,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="@dimen/activity_vertical_margin_top"
     tools:context=".ListGroupsActivity" >
+    
+    
+    
+    <TextView 
+        android:id="@+id/titleGroupList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:gravity="center_horizontal"
+        android:includeFontPadding="false"
+        android:background="@drawable/group_list_title_background"
+        android:textSize="32sp"
+        android:layout_marginTop="10dp"
+        
+        android:paddingBottom="20dp"
+        android:text="@string/GroupListTitle" />
+        "
 
     <ListView
         android:id="@+id/listOfGroups"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" >
-    </ListView>
+        android:layout_marginTop="10dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:layout_centerHorizontal="true" 
+        android:layout_centerVertical="true"
+        android:gravity="center_horizontal"
+        android:layout_below="@id/titleGroupList"
+		android:divider="#111111"
+        android:dividerHeight="0.8dp"/>
+    
+    <com.facebook.widget.LoginButton
+        android:id="@+id/authButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:layout_alignParentBottom="true"
+        />
 
 </RelativeLayout>
