--- a/GoToApp/res/layout/activity_add_group.xml
+++ b/GoToApp/res/layout/activity_add_group.xml
@@ -3,13 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="0dp"
-    android:paddingRight="0dp"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".GroupDetailActivity" >
-
+    tools:context=".AddGroupActivity" >
+    
     <TextView
-        android:id="@+id/groupDetailListTitle"
+        android:id="@+id/addGroupTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -19,20 +19,17 @@
         android:background="@drawable/group_list_title_background"
         android:textSize="32sp"
         android:paddingBottom="20dp"
-        android:text="@string/GroupListTitle"/>
-    
-    <ListView
-        android:id="@+id/groupEvents"
-        android:layout_width="match_parent"
+        android:text="@string/add_group_title"/>
+
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/addGroupTitle"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/groupDetailListTitle"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:gravity="center_horizontal"
-        android:divider="#111111"
-        android:dividerHeight="0.8dp" />
-    
+        android:ems="10" >
+
+        <requestFocus />
+    </EditText>
+
 </RelativeLayout>
