--- a/GoToApp/res/layout/activity_list_groups.xml
+++ b/GoToApp/res/layout/activity_list_groups.xml
@@ -8,8 +8,6 @@
     android:paddingTop="@dimen/activity_vertical_margin_top"
     tools:context=".ListGroupsActivity" >
     
-    
-    
     <TextView 
         android:id="@+id/titleGroupList"
         android:layout_width="match_parent"
@@ -20,10 +18,20 @@
         android:background="@drawable/group_list_title_background"
         android:textSize="32sp"
         android:layout_marginTop="10dp"
-        
         android:paddingBottom="20dp"
         android:text="@string/GroupListTitle" />
-        "
+    
+    <TextView
+        android:id="@+id/addGroupButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:gravity="center_vertical"
+        android:text="@string/add_group"
+        android:textColor="#0000AA"
+        android:textSize="26sp" />
 
     <ListView
         android:id="@+id/listOfGroups"
